syntax = "proto3";

package saffron.externalRuntime;

import "Task.proto";

message RuntimeOption {
  saffron.execution.TaskKey task_key = 1;
  string runtime_address = 2;
}

message ExceptionInfo {
    string type = 1;
    string message = 2;
    string stack_trace = 3;
}
